--- a/index.html
+++ b/index.html
@@ -2,49 +2,52 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Black Jack</title>
-    <link rel="stylesheet" href="./assets/css/index.css" />
-    <!-- Bootstrap-->
+    <!--Bootstrap CSS only-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+  
+    <title>Blackjack App</title>
   </head>
-
   <body>
-    <section id="game_container">
-      <div id="header">Blackjack</div>
-      <div id="game_buttons" class="col-12 text-center">
-        <button id="btn_new_game" class="game_buttons">Nuevo Juego</button>
-        <button id="btn_new_card" class="game_buttons" disabled="true">
-          Pedir carta
-        </button>
-        <button id="btn_stop" class="game_buttons" disabled="true">
-          Detener
-        </button>
-      </div>
+    <div id="app">
+      <header class="titulo">Blackjack</header>
 
-      <div class="row">
-        <div class="col">
-          <h1 class="titles">Jugador 1 - <span id="player_score">0</span></h1>
+      <div class="row mt-2">
+        <div id="divBotones" class="col text-center">
+          <button id="btnNuevo" class="btn btn-danger">Nuevo Juego</button>
+          <button id="btnPedir" disabled="disabled" class="btn btn-primary">
+            Pedir carta
+          </button>
+          <button id="btnDetener" disabled="disabled" class="btn btn-primary">
+            Detener
+          </button>
         </div>
-
-        <div id="cards_player"></div>
       </div>
 
-      <div class="row">
-        <h1 class="titles">Computadora - <span id="pc_score">0</span></h1>
-        <div id="cards_pc"></div>
+      <div class="row container">
+        <div class="col">
+          <h1>Jugador 1 - <small>0</small></h1>
+          <div id="jugador-cartas" class="divCartas">
+            <!-- <img class="carta" src="assets/cartas/2C.png"> -->
+          </div>
+        </div>
       </div>
-    </section>
 
-    <script src="./assets/js/underscore-min.js"></script>
-    <script src="./assets/js/cards.js"></script>
-    <script src="./assets/js/script.js"></script>
-
-    <!--Underscore library-->
+      <div class="row container mt-2">
+        <div class="col">
+          <h1>Computadora - <small>0</small></h1>
+          <div id="computadora-cartas" class="divCartas">
+            <!-- <img class="carta" src="assets/cartas/3C.png"> -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
